gke/1-ingress/lego-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lego
  namespace: lego
  labels:
    app: lego
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  rules:
  - host: santa.local
    http:
      paths:
      - path: /lego
        backend:
          serviceName: lego-v1
          servicePort: 80
