gke/1-ingress/playmo-blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playmo
  namespace: playmo
  labels:
    app: playmo
  annotations:
    kubernetes.io/ingress.class: "contour"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-santa
    hosts:
    - santa.local
  rules:
  - host: santa.local
    http:
      paths:
      - path: /playmo
        backend:
          serviceName: playmo-v1
          servicePort: 80
      - path: /blog
        backend:
          serviceName: playmo-blog
          servicePort: 80
