gke/1-ingress/playmo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playmo
  namespace: playmo
  labels:
    app: playmo
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  rules:
  - host: santa.local
    http:
      paths:
      - path: /playmo
        backend:
          serviceName: playmo-v1
          servicePort: 80
