gke/1-ingress/santa-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: root-santa
  namespace: santa
  labels:
    app: root-santa
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  rules:
  - host: santa.local
    http:
      paths:
      - path:
        backend:
          serviceName: santa-v1
          servicePort: 80
